--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -5,9 +5,10 @@
 <table>
   <thead>
     <tr>
-      <th>Title</th>
-      <th>Content</th>
-      <th>Image url</th>
+      <th>Titulo</th>
+      <th>Contenido</th>
+      <th>Imagen</th>
+      <th>Creado en</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -18,9 +19,7 @@
         <td><%= post.title %></td>
         <td><%= post.content %></td>
         <td><%= post.image_url %></td>
-        <td><%= link_to 'Show', post %></td>
-        <td><%= link_to 'Edit', edit_post_path(post) %></td>
-        <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= post.created_at %></td>
       </tr>
     <% end %>
   </tbody>
@@ -28,4 +27,11 @@
 
 <br>
 
-<%= link_to 'New Post', new_post_path %>
+<%
+=begin%>
+ <%= link_to 'New Post', new_post_path %>
+        <td><%= link_to 'Show', post %></td>
+        <td><%= link_to 'Edit', edit_post_path(post) %></td>
+        <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td> 
+<%
+=end%>
