--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -15,5 +15,10 @@
   <%= @post.image_url %>
 </p>
 
+<p>
+  <strong>Created at:</strong>
+  <%= @post.created_at %>
+</p>
+
 <%= link_to 'Edit', edit_post_path(@post) %> |
 <%= link_to 'Back', posts_path %>
