ADDED authentication to create a new post with link in index

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -27,6 +27,8 @@
 
 <br>
 
+<%= link_to  'Crear solo (solo por Administrador con clave de autenticacion)', new_post_path %>
+
 <%
 =begin%>
  <%= link_to 'New Post', new_post_path %>
