--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,6 +1,6 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Posts</h1>
+<h1>Blog para desafio</h1>
 
 <table>
   <thead>
@@ -26,7 +26,7 @@
 </table>
 
 <br>
-
+<%= link_to  "dashboard", dashboard_posts_path %>
 
 <%
 =begin%>
