--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,38 +1,51 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Blog para desafio</h1>
+<div class="container">
+    <h1>Blog para desafio</h1>
+    <div class="row">
+        <div class="col-lg-12 offset-md-1">
+            <table class="table">
 
-<table>
-  <thead>
-    <tr>
-      <th>Titulo</th>
-      <th>Contenido</th>
-      <th>Imagen</th>
-      <th>Creado en</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+              <thead>
+                <tr>
+                  <th>Titulo</th>
+                  <th>Contenido</th>
+                  <th>Imagen</th>
+                  <th>Creado en</th>
+                  <th colspan="3"></th>
+                </tr>
+              </thead>
 
-  <tbody>
-    <% @posts.each do |post| %>
-      <tr>
-        <td><%= post.title %></td>
-        <td><%= post.content %></td>
-        <td><%= post.image_url %></td>
-        <td><%= post.created_at %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+              <tbody>
+                <% @posts.each do |post| %>
+                  <tr>
+                    <td><%= post.title %></td>
+                    <td><%= post.content %></td>
+                    <td><%= post.image_url %></td>
+                    <td><%= post.created_at %></td>
+                  </tr>
+                <% end %>
+              </tbody>
+            </table>
+        </div>
+    </div>
+
 
 <br>
-<%= link_to  "dashboard", dashboard_posts_path %>
+<%= link_to  "Crear post en Dashboard - solo para administrador con clave", dashboard_posts_path %>
+
+
+
+  </div>
+
+
+
+
 
 <%
 =begin%>
  <%= link_to 'New Post', new_post_path %>
         <td><%= link_to 'Show', post %></td>
         <td><%= link_to 'Edit', edit_post_path(post) %></td>
-        <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td> 
 <%
 =end%>
