--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,6 +1,12 @@
-<h1>Nuevo Post de Administrador</h1>
 
-<%= render 'form', post: @post %>
 
-<%= link_to 'Back', posts_path %>
+<div class="container">
+
+    <h1>Nuevo Post de Administrador</h1>
+
+    <%= render 'form', post: @post %>
+
+    <%= link_to 'Back', posts_path %>
+
+</div>
 
